--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="container">
 				<video
 					id="player"
-					src="https://s3.us-east-2.amazonaws.com/lofi.co/lofi.co/scenes/chill-vibes/BDR%20Day-Christmas%20ver%20112521%20%281%29.mp4"
+					src="/assets/videos/video1.mp4"
 					loop
 					muted
 					autoplay
@@ -29,6 +29,11 @@
 							>
 						</li>
 						<li class="item-menu"><a href="javascript:;">Cài đặt</a></li>
+						<li class="item-menu">
+							<a href="javascript:;" onclick="go_full_screen()"
+								>Toàn màn hình</a
+							>
+						</li>
 					</ul>
 				</div>
 				<!-- Menu header-->
@@ -36,25 +41,24 @@
 				<!-- Menu footer -->
 				<!-- Menu footer -->
 			</div>
-
-			<!-- modal -->
-			<div id="modal">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h3 class="title">Modal header</h3>
-						<span class="close">&times;</span>
-					</div>
-					<div class="modal-body">
-						<p>Nội dung modal</p>
-					</div>
-					<div class="modal-footer">
-						<button class="submit-modal">Ok</button>
-						<button class="cancel-modal" onclick="closeModal()">Cancel</button>
-					</div>
+		</div>
+		<!-- modal -->
+		<div id="modal">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h3 class="title">Modal header</h3>
+					<span class="close">&times;</span>
+				</div>
+				<div class="modal-body">
+					<p>Nội dung modal</p>
+				</div>
+				<div class="modal-footer">
+					<button class="submit-modal">Ok</button>
+					<button class="cancel-modal" onclick="closeModal()">Cancel</button>
 				</div>
 			</div>
-			<!-- modal -->
 		</div>
+		<!-- modal -->
 	</body>
 </html>
 <script src="/assets/js/main.js"></script>
