--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 					<div class="detail-task">
-						<span class="time-task">25:00</span>
+						<span class="time-task">05:00</span>
 						<div class="title-task">
 							<marquee width="100%" direction="left" scrollamount="3">
 								This is a sample scrolling text that has scrolls texts to left.
@@ -113,5 +113,6 @@
 		<!-- Audio player -->
 	</body>
 </html>
+<script src="/assets/js/timer.js"></script>
 <script src="/assets/js/player.js"></script>
 <script src="/assets/js/main.js"></script>
